# cs-366-project

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
db_data/: postmaster.pid
db_data/base/1/: pg_internal.init
db_data/base/5/: 16391  pg_internal.init
db_data/global/: 1260  pg_control  pg_internal.init
static/scripts/: shared_global.js
static/scripts/store/: libraries1.js
static/styles/: login.css  shared_global.css  shared_responsive.css  store.css
templates/: index.html
